Recreate existing blog theme.

--- a/metalsmith/src/404.md
+++ b/metalsmith/src/404.md
@@ -3,5 +3,7 @@ title: Page Not Found
 author: David Timmons
 slug: 404
 draft: false
+metaDescription: Uh-oh! Page not found.
+layout: '404.html'
 permalink: false
 ---
